- For 'Mute mount sounds' ('System'), the 'Furlines' option now includes Startouched Furline.

11.0.12 - 9th October 2024
- For 'Mute game sounds' ('System'), the 'Shouts' option now includes more sounds for more races.

11.0.11 - 2nd October 2024
- Game API updates.

11.0.10 - 25th September 2024
- For 'Mute mount sounds' ('System'), added 'Rabbits'.  If checked, divine rabbits will be quieter.  This applies to Jade, Bright Foreseer.
- For 'Mute game sounds' ('System'), the 'Shouts' option now applies to Earthen too.  The 'Pickaxe' option has been removed.  You can mute the sounds for this item with the 'Shouts' option.
- For 'Enhance minimap' ('Interface'), improved compatibility with Zygor minimap button notifications.
- PTR (11.0.5): Removed the 'Show character addons' ('System') option as it's now included in the game.

11.0.08 - 11th September 2024
- Game API updates.

11.0.07 - 4th September 2024
- For 'Remove transforms' ('System'), added 'Cursed Pickaxe'.  If enabled, the Cursed Pickaxe transform will be removed when applied.
- For 'Mute game sounds' ('System'), added 'Pickaxe'.  If enabled, the Cursed Pickaxe sounds will be muted.
- For 'Media', added zone music for Khaz Algar.  This includes Ringing Deeps, Isle of Dorn, Hallowfall and Azj-Kahet.
- For 'Media', added dungeon music for The War Within.  This includes Ara-Kara, City of Threads, Dawnbreaker, Nerub-ar Palace, Priory of the Sacred Flame and Rookery.
- For 'Media', added movies for Dragonflight.  This includes Fury Incarnate, Crown of Flame, Blessing of Amirdrassil and Iridikron and Vyranoth.  You can watch in Movies and listen in Various > Cinematics.
- For 'Media', added movies for The War Within.  This includes The War Within, Thrall and Anduin, Threads of Destiny, The Story So Far, Dalaran Arrives at Khaz Algar, The Guardian and the Harbinger, Magni's Sacrifice, Ascension Day and Confronting Xal'atath.  You can watch in Movies and listen in Various > Cinematics.

11.0.05 - 21st August 2024